<resources>
    <string name="app_name">Notiquake</string>
    <string name="logoText">NOTIQUAKE</string>
    <string name="loginText">Sign In</string>
    <string name="registerText">Sign Up</string>
    <string name="btnRegister">Sign Up</string>
    <string name="nameHint">Full name</string>
    <string name="usernameHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="confirmPasswordHint">Confirm Password</string>
    <string name="resetPassword">Forgot My Password!</string>
    <string name="alreadySignedUp">Already have account? Sign in here</string>
    <string name="checkBoxText">Remember Me</string>
    <string name="requiredFieldError">Required Field</string>
    <string name="successfulAlert">"Registered, Please check your email for verification."</string>
    <string name="emptyEditTex"> </string>
    <string name="retryTxt">RETRY</string>
    <string name="btnSubmit">SEND MY PASSWORD</string>
    <string name="no_connection">No Internet Connection</string>
    <string name="no_earthquakes_found">No Earthquakes Found</string>
    <string name="reset_password_title">Reset your Password.</string>
    <string name="signin_connection_error">CHECK YOU INTERNET CONNECT!!</string>
    <string name="rg_toast_text">Please select an answer</string>
    <string name="submit_toast_text">Please fill in all flied and answer questions</string>

    <string name="more_dialog_msg">View more information about the earthquake</string>
    <string name="more_info_yes">Proceed</string>
    <string name="more_info_no">Cancel</string>
    <!--Strings for the SignIn Activity -->
    <string name="failedLoginTxt">INCORRECT USERNAME &amp; PASSWORD</string>

    <!--Strings for the SignUp Activity-->
    <string name="passwordError">PASSWORD DONT MATCH</string>
    <string name="regFailedText">REGISTRATION FAILED</string>

    <string name="resetPassToast">PASSWORD SEND TO YOUR EMAIL</string>

    <!--Menu Items Titles-->
    <string name="profileTitle">My Profile</string>
    <string name="signOutTitle">Sign Out</string>
    <string name="setAlerts">Set Alerts</string>
    <string name="exitTitle">Exit</string>
    <string name="sortTitle">Sort</string>
    <string name="searchTitle">Search</string>
    <string name="tv_date">TextView</string>

    <!--Earthquake Activity-->
    <string name="perceived_strength">Perceived Strength</string>
    <string name="more_information">More Information</string>
    <string name="number_people"> People felt it.</string>
    <string name="text_depth">km Depth</string>
    <string name="text_tsunami">Tsunami Alert :</string>
    <string name="tv_tell_us">Did you feel it?, Report.</string>

    <!-- Earhtquake Report Layout-->
    <string name="tv_title">Report -Tell Us!</string>
    <string name="tv_feelt_it">Did you fell it?</string>
    <string name="checkBox1">Yes</string>
    <string name="checkBox2">No</string>
    <string name="tv_time">Time of Earthquake</string>
    <string name="tv_time_hint">Local Time (1/31/2020 9:00 AM) or Relative Rime(5 minutes ago)</string>
    <string name="tv_location">Your location when the earthquake occurred</string>
    <string name="more_details">Provide additional details</string>

    <string name="question1">What was your situation during the earthquake?</string>
    <string name="question2">How would you describe the shaking?</string>
    <string name="question3">Was it difficult to stand and/or walk?</string>
    <string name="question4">Did you hear creaking or other noises?</string>
    <string name="question5">Were free-standing walls or fences damaged?</string>
    <string name="question6">How did you react?</string>

    <string name="question1_rb1">Inside a building</string>
    <string name="question1_rb2">Outside a building</string>
    <string name="question1_rb3">In a stopped vehicle</string>
    <string name="question1_rb4">In a moving vehicle</string>

    <string name="question2_rb1">Violent</string>
    <string name="question2_rb2">Strong</string>
    <string name="question2_rb3">Moderate</string>
    <string name="question2_rb4">Mild</string>
    <string name="question2_rb5">Weak</string>

    <string name="question3_rb1">Yes</string>
    <string name="question3_rb2">No</string>
    <string name="question3_rb3">Not specified</string>

    <string name="question4_rb1">Yes, slight noise</string>
    <string name="question4_rb2">Yes,loud noise</string>
    <string name="question4_rb3">No</string>
    <string name="question4_rb4">Not specified</string>

    <string name="question5_rb1">No</string>
    <string name="question5_rb2">Yes,some were cracked</string>
    <string name="question5_rb3">Yes, some partially fell</string>
    <string name="question5_rb4">Yes, some fell completely</string>
    <string name="question5_rb5">Not specified</string>

    <string name="question6_rb1">Somewhat frightened</string>
    <string name="question6_rb2">Very frightened</string>
    <string name="question6_rb3">Extremely frightened</string>
    <string name="question6_rb4">Very little reaction</string>
    <string name="question6_rb5">No reaction</string>

    <string name="tv_comments">Additional comments</string>
    <string name="tv_information">Contact information</string>
    <string name="tv_name_hint">Name</string>
    <string name="tv_email_hint">Email</string>
    <string name="tv_phone_hint">Phone</string>

    <string name="btnTellUs">Tell Us</string>

    <string name="settings_title">Earthquake Settings</string>

    <string name="settings_min_magnitude_label">Minimum Magnitude</string>
    <string name="settings_min_magnitude_key" translatable="false">min_magnitude</string>
    <string name="settings_min_magnitude_default" translatable="false">0</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_magnitude_value</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_order_by_magnitude_label">Magnitude</string>
    <string name="settings_order_by_magnitude_value" translatable="false">magnitude</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">time</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="reportLabel">Feedback</string>
    <string name="earthQLabel">Earthquake</string>
    <string name="earthquakeTab_title">Earthquakes</string>
    <string name="earthquakeNewsTab_title">Earthquake News</string>

    <string name="author_null">Unknown</string>


</resources>
