<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_design"
    tools:context=".app.activties.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/login_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:contentDescription="@string/logoText"
                app:srcCompat="@drawable/ic_bubble_purple"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_logo"
                android:layout_centerInParent="true"
                android:textColor="@color/mainColorOne"
                android:textAllCaps="true"
                android:fontFamily="sans-serif-medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_gravity="center_horizontal"
                android:text="@string/loginText" />

        </RelativeLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp">

            <EditText
                android:id="@+id/ed_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="16dp"
                android:ems="10"
                android:hint="@string/usernameHint"
                android:drawableLeft="@drawable/ic_email_signin"
                android:drawableStart="@drawable/ic_email_signin"
                android:drawablePadding="16dp"
                android:textColorHint="@color/mainColorOne"
                android:textColor="@color/mainColorOne"
                app:backgroundTint="@color/mainColorOne"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/passwordHint"
                android:padding="16dp"
                android:drawableLeft="@drawable/ic_lock_signin"
                android:drawableStart="@drawable/ic_lock_signin"
                android:drawablePadding="16dp"
                android:textColorHint="@color/mainColorOne"
                android:textColor="@color/mainColorOne"
                app:backgroundTint="@color/mainColorOne"
                android:ems="10"
                android:inputType="textPassword"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_gravity="center">

            <Button
                android:id="@+id/btnLogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/mainColorOne"
                android:background="@drawable/btn_signin_design"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:text="@string/loginText" />
            <TextView
                android:id="@+id/tvResetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/linkText"
                android:layout_margin="24dp"
                android:layout_gravity="center"
                android:text="@string/resetPassword" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:textColor="@android:color/white"
                android:background="@drawable/btn_register"
                android:text="@string/btnRegister" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>