<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_design"
    tools:context=".app.activties.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/login_logo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:contentDescription="@string/logoText"
                    android:padding="20dp"
                    app:srcCompat="@drawable/ic_bubble_chart"
                    tools:ignore="VectorDrawableCompat"
                    android:layout_alignParentLeft="true" />
                <TextView
                    android:id="@+id/registertext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/login_logo"
                    android:layout_centerInParent="true"
                    android:textColor="@android:color/white"
                    android:textAllCaps="true"
                    android:fontFamily="sans-serif-medium"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/registerText" />

            </RelativeLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp">


                <EditText
                    android:id="@+id/ed_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="16dp"
                    android:layout_margin="10dp"
                    android:ems="10"
                    android:hint="@string/usernameHint"
                    android:drawableLeft="@drawable/ic_email_signup"
                    android:drawableStart="@drawable/ic_email_signup"
                    android:drawablePadding="16dp"
                    android:textColorHint="@android:color/white"
                    android:textColor="@android:color/white"
                    app:backgroundTint="@android:color/white"
                    android:inputType="textEmailAddress" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="@android:color/white"
                    app:passwordToggleEnabled="true">
                    <EditText
                        android:id="@+id/ed_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:drawableStart="@drawable/ic_lock_signup"
                        android:drawableLeft="@drawable/ic_lock_signup"
                        android:drawablePadding="16dp"
                        android:ems="10"
                        android:hint="@string/passwordHint"
                        android:inputType="textPassword"
                        android:padding="16dp"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        app:backgroundTint="@android:color/white" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="@android:color/white"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/ed_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:drawableStart="@drawable/ic_lock_signup"
                        android:drawableLeft="@drawable/ic_lock_signup"
                        android:drawablePadding="16dp"
                        android:ems="10"
                        android:hint="@string/confirmPasswordHint"
                        android:inputType="textPassword"
                        android:padding="16dp"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        app:backgroundTint="@android:color/white" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <Button
                    android:id="@+id/btnRegSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mainColorOne"
                    android:background="@drawable/btn_design"
                    android:layout_marginLeft="70dp"
                    android:layout_marginRight="70dp"
                    android:text="@string/btnRegister" />

                <TextView
                    android:id="@+id/tvAlreadyHaveAcc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:layout_margin="16dp"
                    android:layout_gravity="center"
                    android:text="@string/alreadySignedUp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>