<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_design"
    tools:context=".app.activties.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="50dp">
                <ImageView
                    android:id="@+id/login_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/logoText"
                    android:layout_centerInParent="true"
                    android:padding="32dp"
                    app:srcCompat="@mipmap/ic_login_icon"
                    tools:ignore="VectorDrawableCompat" />
                <TextView
                    android:id="@+id/logo_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/login_logo"
                    android:padding="16dp"
                    android:textColor="@android:color/white"
                    android:textAllCaps="true"
                    android:fontFamily="sans-serif-light"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:text="@string/logoText" />
        </RelativeLayout>

           <LinearLayout
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <Button
                   android:id="@+id/btnSignIn"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="70dp"
                   android:layout_marginRight="70dp"
                   android:layout_marginBottom="24dp"
                   android:layout_gravity="bottom"
                   android:textColor="@color/mainColorOne"
                   android:background="@drawable/btn_design"
                   android:text="@string/loginText" />

               <Button
                   android:id="@+id/btnSignUp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="70dp"
                   android:layout_marginRight="70dp"
                   android:textColor="@android:color/white"
                   android:background="@drawable/btn_register"
                   android:text="@string/btnRegister" />

           </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>